--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 VITE_GEMINI_API_KEY=
-VITE_GEMINI_MODEL=gemini-3-flash-preview
+VITE_GEMINI_MODEL=
 GEMINI_API_KEY=
-GEMINI_MODEL=gemini-3-flash-preview
+GEMINI_MODEL=
